--- a/project/templates/base_admin.html
+++ b/project/templates/base_admin.html
@@ -10,7 +10,8 @@
     <body>
         <aside>
             <a class="title-logo" href="/admin/">
-                GPTQuiz
+                <img src="{{ url_for('static', filename= 'images/atom.svg') }}">
+                <h1>GPTQuiz</h1>
             </a>
             
             <button class="create-btn-ripple createQuiz">
