--- a/execution_app/static/css/summary.css
+++ b/execution_app/static/css/summary.css
@@ -18,6 +18,7 @@
     color: white;
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 
 ::-webkit-scrollbar {
@@ -30,17 +31,85 @@ body {
     align-items: center;
     gap: 30px;
 }
-header {
+header{
     position: relative;
     left: 0;
     top: 0;
-    width: calc(100% - 20px);
-    background-color: #282828;
-    height: 85px;
+    width: 100%;
+    height: 80px;
     display: flex;
-    align-items: center;
     justify-content: center;
-    padding: 10px;
+    align-items: center;
+    
+    background: linear-gradient(55deg, #363636, #262626);
+    box-shadow: 0px 10px 15px 0px rgba(0,0,0,0.5);
+
+}
+.logo-title{
+    width: 30%;
+    height: 100%;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    padding-left: 200px;
+    text-decoration: none ;
+}
+.logo-title img{
+    width: 65px;
+    height: 65px;
+}
+.logo-title h1{
+    font-family: "Inter";
+    font-size: 30px;
+    color: white;
+}
+
+.links{
+    width: 70%;
+    height: 100%;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    padding-right: 200px;
+    gap: 20px;
+}
+
+.links a{
+    font-family: 'Inter';
+    font-size: 20px;
+    font-weight: 300;
+    color: white;
+    text-decoration: none;
+}
+
+.enter-code{
+    height: 45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 20px 10px 20px;
+    border: white 1px solid;
+    border-radius: 10px;
+}
+
+.login{
+    height: 45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 20px 10px 20px;
+    background-color: #454545;
+    border-radius: 10px;
+}
+
+.signin{
+    height: 45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 20px 10px 20px;
+    background-color: #8854C3;
+    border-radius: 10px;
 }
 header img {
     height: 100%;
