--- a/project/static/css/base_admin.css
+++ b/project/static/css/base_admin.css
@@ -50,6 +50,8 @@ aside img{
     text-decoration: none;
     margin-bottom: 10px;
     margin-top: 5px;
+    display: flex;
+    align-items: center;
 }
 
 h1{
@@ -115,7 +117,7 @@ aside button:hover {
 
 .nav{
     width: 100%;
-    height: 45px;
+    height: 80px;
     position: absolute;
     right: 0;
     background-color: #333333;
@@ -125,6 +127,7 @@ aside button:hover {
     align-items: center;
     padding-right: 15px;
     gap: 20px;
+    z-index: 4;
 }
 .nav a img{
     width: 90%;
@@ -136,19 +139,18 @@ aside button:hover {
 }
 .nav a{
     font-family: "Inter";
-    font-size: 18px;
+    font-size: 22px;
     color: white;
     text-decoration: none;
 }
 .enter-code{
-    font-family: 'Inter';
-    font-size: 16px;
-    color: white;
-    text-decoration: none;
-    padding: 5px 10px;
-    border: 1px solid white;
-    border-radius: 5px;
-    background-color: #454545;
+    height: 45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 20px 10px 20px;
+    border: white 1px solid;
+    border-radius: 10px;    
 }
 .ai-text {
     color: #B26FFF;
