--- a/home_app/templates/home.html
+++ b/home_app/templates/home.html
@@ -14,22 +14,28 @@
         <div class="line"></div>
         <h2 class="welcome-information"><span id="name">GPTQuiz</span> - твій зручний помічний у навчанні та роботі,<br> це платформа для <span>створення</span>, <span>проходження</span> <br> та <span>аналізу </span>вікторин</h2>
     </div>
+    <br>
     <div class="block-quizes">
         <h2>Популярні вікторини</h2>
         <div class="quizes">
-            {% for quiz in quizes %}
-                <a href="/host/{{ quiz.id }}" class="quiz">
-                    <img src="{{ url_for('library_app.static', filename= quiz.image) }}" alt="">
-                    <h3>{{ quiz.name }}</h3>
-                    <h4>Aвтор: {{ quiz.user.surname }} {{ quiz.user.name }}</h4>
-                    <p class="description">Опис: {{ quiz.description }}</p>
-                    <hr>
-                    <p>{{ quiz.count_questions }} запитань</p>
-                    <hr>
-                    <p>{{ quiz.codes|length }} переглядів</p>
-                </a>
-            {% endfor %}
+            <button class="scroll-btn scroll-left-btn"></button>
+            <div>
+                {% for quiz in quizes %}
+                    <a href="/host/{{ quiz.id }}" class="quiz">
+                        <img src="{{ url_for('library_app.static', filename= quiz.image) }}" alt="">
+                        <h3>{{ quiz.name }}</h3>
+                        <h4>Aвтор: {{ quiz.user.surname }} {{ quiz.user.name }}</h4>
+                        <p class="description">Опис: {{ quiz.description }}</p>
+                        <hr>
+                        <p>{{ quiz.count_questions }} запитань</p>
+                        <hr>
+                        <p>{{ quiz.codes|length }} переглядів</p>
+                    </a>
+                {% endfor %}
+            </div>
+            <button class="scroll-btn scroll-right-btn"></button>
         </div>
     </div>
     <script src="{{ url_for('home_app.static', filename='js/description.js') }}"></script>
+    <script src="{{ url_for('home_app.static', filename='js/scroll.js') }}"></script>
 {% endblock %}
