--- a/project/static/css/base.css
+++ b/project/static/css/base.css
@@ -24,9 +24,24 @@ body{
   background: #2b2b2b;
 }
 
+body::-webkit-scrollbar {
+    background-color: #2b2b2b;
+}
+body::-webkit-scrollbar-thumb {
+    background-color: #121212;
+    border: 5px solid #2b2b2b;
+    border-radius: 10px;
+}
+body::-webkit-scrollbar-thumb:hover {
+  border-width: 3.5px;
+}
+button, a {
+  -webkit-tap-highlight-color: transparent;
+}
+
 textarea:focus, input:focus{
   transition: all 0.2s ease-in-out;
-  outline:solid #B26FFF 1px ;
+  outline: solid #B26FFF 1px;
 }
 
 .without-auth{
@@ -105,4 +120,13 @@ textarea:focus, input:focus{
     padding: 10px 20px 10px 20px;
     background-color: #8854C3;
     border-radius: 10px;
+}
+@media (max-width: 768px) {
+    hr, .line {
+      width: 100%;
+    }
+
+    .links a {
+      display: none;
+    }
 }
