--- a/reports_app/static/css/reports.css
+++ b/reports_app/static/css/reports.css
@@ -27,13 +27,14 @@ header h2{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 30px;
+    padding: 40px;
     gap: 15px;
     width: calc(100% - 220px);
+
 }
 
 .reports-main {
-    width: 1052px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -73,6 +74,7 @@ header h2{
     width: 100%;
 }
 .report {
+    position: relative;
     width: 100%;
     height: 80px;
     display: flex;
@@ -88,10 +90,18 @@ header h2{
     align-items: center;
     gap: 5px;
 }
-.titleRoom h3{
-    width: 505px;
+#name{
+    position: relative;
+    width: 47.2vw;
     font-size: 20px;
     font-weight: 400;
+}
+#code{
+    font-size: 16px;
+    font-weight: 300;
+    text-align: center;
+    width: 100px;
+    color: #B26FFF;
 }
 .infoRoom {
     display: flex;
@@ -105,8 +115,8 @@ header h2{
     text-align: center;
 }
 #students {
-    width: 50px;
-    text-align: center;
+    width: 60px;
+    text-align: end;
 }
 #date1 {
     width: 110px;
