--- a/reports_app/templates/reports.html
+++ b/reports_app/templates/reports.html
@@ -19,7 +19,7 @@
                     <div class="titles">
                         <div class="name-div">
                             <h3>Код</h3>
-                            <h3>І'мя</h3>
+                            <h3>Ім'я</h3>
                         </div>
                         <div class="info-div">
                             <h3 id="successful">Успішність</h3>
@@ -32,7 +32,8 @@
                             <a href="/report/{{ room.id }}" class="report">    
                                 <div class="titleRoom">
                                     <img src="{{ url_for('library_app.static', filename=room.roomsQuiz.image) }}" alt="">
-                                    <h3>({{ room.redeem_codes[0].code_enter }})   {{ room.roomsQuiz.name }}</h3>
+                                    <h3 id="code">({{ room.redeem_codes[0].code_enter }})</h3>
+                                    <h3 id="name">{{ room.roomsQuiz.name }}</h3>
                                 </div>
                                 <div class="infoRoom">
                                     <div id="rate">
