--- a/home_app/templates/home.html
+++ b/home_app/templates/home.html
@@ -12,7 +12,7 @@
     <div class="welcome">
         <p class="welcome-text">Представляємо вам <span>Освітницький комплекс</span></p>
         <div class="line"></div>
-        <h2 class="welcome-information"><span id="name">GPTQuiz</span> - твій зручний помічний у навчанні та роботі,<br> це платформа для <span>створення</span>, <span>проходження</span> <br> та <span>аналізу </span>вікторин</h2>
+        <h2 class="welcome-information"><span id="name">GPTQuiz</span> - твій зручний помічний у навчанні та роботі,<br> це платформа для <a href="/create-quiz/">створення</a>, <a href="/execution/">проходження</a> <br> та <span>аналізу </span>вікторин</h2>
     </div>
     <br>
     <div class="block-quizes">
