--- a/user_app/static/css/login.css
+++ b/user_app/static/css/login.css
@@ -1,83 +1,99 @@
 form {
-    width: 525px;
-    height: 530px;
-    /*  */
+    width: calc(23vw + 10vh);
+    height: 45vh;
     background-color: #262626;
-    border-radius: 40px;
-    /*  */
+    border-radius: 2.5vw;
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: space-between;
     align-items: center;
-    padding: 20px 30px;
+    padding: 3vh 3vw;
     position: relative;
     left: 50%;
     top: 25%;
     transform: translate(-50%, -25%);
 }
-h2{
-    font-family: 'inter';
-    font-size: 30px;
+
+h2 {
+    font-family: 'Inter', sans-serif;
+    font-size: calc(1vw + 1vh);
     font-weight: 500;
     color: white;
+    text-align: center;
 }
+
+.login-block {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    width: 100%;
+}
+
 .inputs {
     display: flex;
     flex-direction: column;
     justify-content: start;
     align-items: center;
-
     width: 100%;
-    padding: 10px;
-    padding-top: 30px;
-
-    gap: 20px;
+    padding: 1vw 0 0 0;
+    gap: 2vh;
 }
 
 input {
     width: 100%;
-    height: 55px;
-    /*  */
+    height: calc(3.5vh + 1vw);
     color: #FFFFFF;
-    font-family: 'Inter';
-    font-size: 22px;
+    font-family: 'Inter', sans-serif;
+    font-size: 1.3vw;
     font-weight: 300;
-    /*  */
-    padding-left: 30px;
-    /*  */
-    border-radius: 100px;
+    padding-left: 5%;
+    border-radius: 50px;
     border: none;
     outline: none;
-    
     background-color: #393939;
+    box-sizing: border-box;
 }
+
 .submit {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    margin-top: 180px;
-    
-    gap: 10px;
-}   
+    align-items: cener;
+    margin-top: 5vh;
+    gap: 1vh;
+}
+
 button {
     color: #FFFFFF;
-    font-family: 'Inter';
-    font-size: 22px;
+    font-family: 'Inter', sans-serif;
+    font-size: calc(1vw + 0.5vh);
     font-weight: 300;
-    padding: 10px 100px;
+    padding: 1vh 5vw;
     background-color: #3860FD;
     border: none;
-    border-radius: 75px;
+    border-radius: 50px;
     outline: none;
     cursor: pointer;
+    transition: background-color 0.3s;
 }
+
+button:hover {
+    background-color: #2b4edc;
+}
+
 .submit p {
     color: #FFFFFF;
-    font-family: 'Inter';
-    font-size: 18px;
+    font-family: 'Inter', sans-serif;
+    font-size: 1vw;
     font-weight: 300;
 }
-.submit p a{
+
+.submit p a {
     color: #3860FD;
+    text-decoration: none;
+}
+
+.submit p a:hover {
+    text-decoration: underline;
 }
