--- a/user_app/templates/login.html
+++ b/user_app/templates/login.html
@@ -10,10 +10,12 @@ Login
 
 {% block content %}
 <form method="post">
-    <h2>Вхiд</h2>
-    <div class="inputs">
-        <input type="text" name="login" placeholder="Логін *" required>
-        <input type="password" name="password" placeholder="Пароль *" required>
+    <div class="login-block">
+        <h2>Вхiд</h2>
+        <div class="inputs">
+            <input type="text" name="login" placeholder="Логін *" required>
+            <input type="password" name="password" placeholder="Пароль *" required>
+        </div>
     </div>
     <div class="submit">
         <button>Увiйти</button>
