--- a/reports_app/static/css/detail_report.css
+++ b/reports_app/static/css/detail_report.css
@@ -171,6 +171,7 @@
     padding: 10px 30px;
     align-items: center;
     border-top: #2B2B2B 2px solid;
+    cursor: pointer;
 }
 .nickname {
     width: 180px;
@@ -204,7 +205,7 @@
     background-color: #F03C39;
 }
 
-.show {
+.modal.show {
     position: absolute;
     left: 50%;
     top: 50%;
@@ -291,7 +292,9 @@
     border-radius: 15px;
     width: 2px;
 }
-#blur {
+#blurrrr {
+    visibility: hidden;
+    opacity: 0;
     position: absolute;
     left: 0;
     top: 0;
@@ -299,8 +302,15 @@
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.25);
+    transition: all 0.3s ease;
     backdrop-filter: blur(2.5px);
 }
+
+#blurrrr.show {
+    visibility: visible;
+    opacity: 1;
+}
+
 #deleteModal{
     position: absolute;
     left: 50%;
