--- a/project/static/css/base_admin.css
+++ b/project/static/css/base_admin.css
@@ -19,6 +19,22 @@
     box-sizing: border-box;
     font-family: Inter, sans-serif;
 }
+
+::-webkit-scrollbar {
+    background-color: #2b2b2b;
+    width: 12px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #121212;
+    border-width: 1px;
+    border: solid #121212;
+    border-radius: 15px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    border-width: 2px;
+}
 ::-webkit-scrollbar {
     display: none;
 }
