--- a/execution_app/templates/student_report.html
+++ b/execution_app/templates/student_report.html
@@ -49,7 +49,7 @@
                         <span>{{ report.max_score }}</span>
                     </div>
                 </div>
-                <div class="grade">
+                <div class="grade" id="empty">
                     
                 </div>
                 <div class="grade">
