--- a/execution_app/static/css/summary.css
+++ b/execution_app/static/css/summary.css
@@ -32,85 +32,79 @@ body {
     gap: 30px;
 }
 header{
-    position: relative;
-    left: 0;
-    top: 0;
     width: 100%;
-    height: 80px;
+    height: calc(2.083333336vw + 3.846153848vh);
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    
     background: linear-gradient(55deg, #363636, #262626);
-    box-shadow: 0px 10px 15px 0px rgba(0,0,0,0.5);
-
+    box-shadow: 0 calc(0.260416667vw + 0.480769231vh) calc(0.390625vw + 0.7211538465vh) rgba(0,0,0,0.5);
+    padding-right: calc(5.20833334vw + 9.61538462vh);
+    padding-left: calc(5.20833334vw + 9.61538462vh);
 }
-.logo-title{
-    width: 30%;
+.logo-title {
     height: 100%;
     display: flex;
     justify-content: start;
     align-items: center;
-    padding-left: 200px;
-    text-decoration: none ;
+    text-decoration: none;
 }
-.logo-title img{
-    width: 65px;
-    height: 65px;
+
+.logo-title img {
+    width: calc(1.6927083355vw + 3.125vh);
+    height: calc(1.6927083355vw + 3.125vh);
 }
-.logo-title h1{
-    font-family: "Inter";
-    font-size: 30px;
+
+.logo-title h1 {
+    font-size: calc(0.78125vw + 1.442307693vh);
     color: white;
 }
 
-.links{
-    width: 70%;
+.links {
     height: 100%;
     display: flex;
     justify-content: end;
     align-items: center;
-    padding-right: 200px;
-    gap: 20px;
+    gap: calc(0.520833334vw + 0.961538462vh);
 }
 
-.links a{
-    font-family: 'Inter';
-    font-size: 20px;
+.links a {
+    font-size: calc(0.520833334vw + 0.961538462vh);
     font-weight: 300;
     color: white;
     text-decoration: none;
 }
 
-.enter-code{
-    height: 45px;
+.enter-code {
+    height: calc(1.1718750015vw + 2.1634615395vh);
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 10px 20px 10px 20px;
-    border: white 1px solid;
-    border-radius: 10px;
+    padding: calc(0.260416667vw + 0.480769231vh) calc(0.520833334vw + 0.961538462vh);
+    border: solid white calc(0.0260416667vw + 0.0480769231vh);
+    border-radius: calc(0.260416667vw + 0.480769231vh);
 }
 
-.login{
-    height: 45px;
+.login {
+    height: calc(1.1718750015vw + 2.1634615395vh);
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 10px 20px 10px 20px;
+    padding: calc(0.260416667vw + 0.480769231vh) calc(0.520833334vw + 0.961538462vh);
     background-color: #454545;
-    border-radius: 10px;
+    border-radius: calc(0.260416667vw + 0.480769231vh);
 }
 
-.signin{
-    height: 45px;
+.signin {
+    height: calc(1.1718750015vw + 2.1634615395vh);
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 10px 20px 10px 20px;
+    padding: calc(0.260416667vw + 0.480769231vh) calc(0.520833334vw + 0.961538462vh);
     background-color: #8854C3;
-    border-radius: 10px;
+    border-radius: calc(0.260416667vw + 0.480769231vh);
 }
+
 header img {
     height: 100%;
 }
@@ -301,4 +295,91 @@ header img {
     top: 15px;
     font-size: 24px;
     font-weight: 400;
+}
+
+@media (max-width: 500px) {
+    #empty {
+        display: none;
+    }
+    .main-info, .questions {
+        width: 90vw;
+    }
+    .main-info {
+        height: auto;
+    }
+    header {
+        height: 55px;
+        padding-left: 15px !important;
+        padding-right: 15px !important;
+        justify-content: space-between;
+        gap: 10px;
+        box-shadow: none;
+    }
+
+    .logo-title img {
+        width: 34px;
+        height: 34px;
+    }
+
+    .logo-title h1 {
+        font-size: 18px;
+    }
+
+    .links {
+        gap: 8px;
+    }
+
+    .links a {
+        font-size: 13px;
+    }
+
+    .enter-code,
+    .login,
+    .signin {
+        height: 32px;
+        padding: 5px 10px;
+        font-size: 13px;
+        border-radius: 6px;
+    }
+    .enter-code {
+        border-width: 1px;
+    }
+    .corr-wrong {
+        height: 15px;
+    }
+    .names h2 {
+        font-size: 20px;
+    }
+    .names h3 {
+        font-size: 14px;
+    }
+    .total-questions h1 {
+        font-size: 30px;
+    }
+    .total-questions p {
+        font-size: 13px;
+    }
+    .total-questions {
+        height: auto;
+    }
+    .grade {
+        width: 100%;
+        gap: 20px;
+    }
+    .grade h4 {
+        font-size: 18px;
+    }
+    .grade div {
+        width: 100px;
+        height: auto + 20px;
+        padding: 8px;
+    }
+    .questions {
+        padding: 10px;
+    }
+    .question {
+        width: 100%;
+        padding: 10px;
+        gap: 15px;
+    }
 }
