--- a/reports_app/templates/detail_report.html
+++ b/reports_app/templates/detail_report.html
@@ -11,12 +11,16 @@
         <div class="report">
             <div class="header-report">
                 <div class="tabs">
-                    <button class="tab selected">Студенти</button>
+                    <button class="tab selected">Загальний огляд</button>
                     <button class="tab not">Питання</button>
-                    <button class="tab not">Заг. огляд</button>
                 </div>
                 <div class="sorting">
                     <p>Сортирувати за %: <button id="sortBtn"><</button></p>
+                </div>
+            </div>
+            <div class="information">
+                <div class="">
+
                 </div>
             </div>
             <div class="judah">
@@ -38,9 +42,15 @@
                 </div>
                 <div class="sort-data">
                     <p>Ім'я</p>
-                    <div>
-                        <p>Точність</p>
+                    <div class="table-headers">
+                        <div class="table-head">
+                            <p>Оцінка</p>
+                        </div>
+                        <div class="table-head">
+                            <p>Точність</p>
+                        </div>
                     </div>
+
                 </div>
                 <div id="studentsContainer">
                     {% for student in report %}
@@ -51,7 +61,10 @@
                                     <span class="answer {% if ans.is_correct %}correct{% else %}wrong{% endif %}"></span>
                                 {% endfor %}
                             </div>
-                            <h5 class="percent">{{ student.percent }}%</h5>
+                            <div class="data">
+                                <h5 class="grade">{{ student.grade }}</h5>
+                                <h5 class="percent">{{ student.percent }}%</h5>
+                            </div>
                         </div>
                     {% endfor %}
                 </div>
