--- a/project/templates/base_admin.html
+++ b/project/templates/base_admin.html
@@ -40,12 +40,12 @@
                     </div>
                     <div class="divider"></div>
                 </a>
-                <a class="tab-link" href="" class="gpt-quiz-ai">
+                <!-- <a class="tab-link" href="" class="gpt-quiz-ai">
                     <div>
                         <img src="{{ url_for('static', filename= 'images/ai.svg') }}">
                         <p class="ai-text">GPTQuiz AI</p>
                     </div>
-                </a>
+                </a> -->
             </div>
         </aside>
         <div class="nav">
