--- a/execution_app/static/css/execution.css
+++ b/execution_app/static/css/execution.css
@@ -122,7 +122,7 @@ main {
     top: 15.83%;
     left: 50%;
     transform: translateX(-50%);
-    width: 300px;
+    width: 450px;
     max-height: 700px;
     background-color: #252525;
     border-radius: 15px;
@@ -357,7 +357,6 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     padding-top: 50px;
     transition: all 0.3s ease;
     opacity: 1;
@@ -369,6 +368,7 @@ main {
 }
 .modal img {
     max-width: 100%;
+    min-width: 95%;
     max-height: 100%;
     border-radius: 5px;
 }
