--- a/host_app/static/css/static.css
+++ b/host_app/static/css/static.css
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-    width: 600px;
+    width: 623px;
 }
 form {
     display: flex;
@@ -38,7 +38,7 @@ button {
     font-size: 16px;
     font-weight: 400;
 }
-.main-info img {
+.ImgQuiz {
     width: 600px;
     height: 240px;
     object-fit: cover;
