--- a/history_app/static/css/history.css
+++ b/history_app/static/css/history.css
@@ -18,7 +18,7 @@ header h2{
 
 .passed-quizes{
     position: relative;
-    top: 45px;
+    top: 80px;
     left: 220px;
     width: calc(100% - 220px);
     display: flex;
@@ -30,7 +30,6 @@ header h2{
 .quiz{
     position: relative;
     width: 325px;
-    height: 500px;
     background-color: #373737;
     border-radius: 10px;  
     display: flex;
@@ -39,25 +38,32 @@ header h2{
     gap: 10px; 
     color: white;
 }
+.quiz div {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
 .quiz h3{
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 400;
 }
 .quiz h4{
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 300;
     opacity: 0.8;
 }
 #desc{
     width: 100%;
-    height: 144px;
+    height: 50px;
+    border-left: white 1px solid;
+    padding-left: 10px;
 }
-.quiz p{
+.quiz p{    
     font-weight: 300;
 }
 .quiz img {
     width: 100%;
-    height: 165px;
+    height: 140px;
     object-fit: cover;
     border-radius: 5px;
 }
