--- a/project/static/css/base.css
+++ b/project/static/css/base.css
@@ -18,7 +18,8 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: Inter;
+    font-family: Inter, sans-serif;
+    text-decoration: none;
 }
 
 
