--- a/project/static/css/base_admin.css
+++ b/project/static/css/base_admin.css
@@ -18,6 +18,7 @@
     margin: 0;
     box-sizing: border-box;
     font-family: Inter, sans-serif;
+    text-decoration: none;
 }
 
 ::-webkit-scrollbar {
