--- a/reports_app/static/css/reports.css
+++ b/reports_app/static/css/reports.css
@@ -234,3 +234,18 @@ header h2{
     border-radius: 5px;
     cursor: pointer;
 }
+.archive-btn {
+    position: fixed;
+    right: 30px;
+    bottom: 30px;
+    width: 60px;
+    height: 60px;
+    background-color: #262626;
+    display: flex;
+    justify-items: center;
+    padding: 10px;
+    border-radius: 10px;
+}
+.archive-btn > img {
+    width: 100%;
+}
