--- a/project/static/css/base_admin.css
+++ b/project/static/css/base_admin.css
@@ -78,7 +78,10 @@ h1{
     font-family: "inter";
     font-size: 26px;
 }
-aside button{
+aside form {
+    width: 100%;
+}
+aside form button{
     width: 100%;
     height: 50px;
     background-color: #22CE00;
@@ -119,6 +122,7 @@ aside button:hover {
     align-items: center;
     gap: 5px;
 }
+
 .divider{
     width: 70%;
     height: 3px;
