--- a/host_app/templates/hosting.html
+++ b/host_app/templates/hosting.html
@@ -113,26 +113,26 @@
                 div.innerHTML = ""
                 const avatarUrl = "{{ url_for('host_app.static', filename='images/avatar.svg') }}";
                 data.results.forEach(res => {
-                    const div = document.createElement("div");
-                    div.innerHTML = `
-                        <div class="student-answer">
-                            <div class="student-avatar-nickname">
-                                <img src="${avatarUrl}">
-                                <h4>${res.nickname}</h4>
-                            </div>
-                            <h5>Відповідь:</h5>
-                            <div class="answers-student">
-                                ${
-                                    Array.isArray(res.answer)
-                                        ? res.answer
-                                            .map(ans => `<div><p>${ans}</p></div>`)
-                                            .join("")
-                                        : `<div><p>${res.answer}</p></div>`
-                                }
-                            </div>
+                    const divA = document.createElement("div");
+                    divA.classList.add("student-answer")
+                    divA.classList.add(res.is_correct ? "student-right" : "student-wrong")
+                    divA.innerHTML = `
+                        <div class="student-avatar-nickname">
+                            <img src="${avatarUrl}">
+                            <h4>${res.nickname}</h4>
+                        </div>
+                        <h5>Відповідь:</h5>
+                        <div class="answers-student">
+                            ${
+                                Array.isArray(res.answer)
+                                    ? res.answer
+                                        .map(ans => `<div><p>${ans}</p></div>`)
+                                        .join("")
+                                    : `<div><p>${res.answer}</p></div>`
+                            }
                         </div>
                     `;
-                    container.appendChild(div);
+                    container.appendChild(divA);
                 });
 
                 
